Third build with Deployment

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>Project2 site</h1>
-    <h6>Second build with deployment</h6>
+    <h6>Third build with deployment</h6>
   </body>
 </html>>
